tests/compile-fail/keyword-ident.dino
fn main() {
    let let = 10;
}
