tests/compile-fail/keyword-ident.stderr
[0m[1m[31merror: [0m[tests/compile-fail/keyword-ident.dino:1] expected an identifer, found: `let`

